# n-Renderer

./: .gitignore  Cargo.toml
.github/workflows/: rust.yml
src/: lib.rs  main.rs  matrix.rs  object.rs  orbital.rs  pos.rs  projection.rs  render.rs  shapes.rs  transform.rs
src/orbital/: lookup.rs
