[package]
name = "n_renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pixels = "0.13.0"
winit = "0.28.6"

# file size optinmailsations
[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
